Add Update account API (update doc and postman collection) Add home/info page
